test: create initial tests
Signed-off-by: Jeremy A Gray <jeremy.a.gray@gmail.com>

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lint": "eslint '**/*.js'",
     "lint-fix": "eslint --fix '**/*.js'",
     "start": "nodemon server.js",
-    "test": "mocha --recursive --exit -ui tdd tests/"
+    "test": "mocha --recursive --exit tests/"
   },
   "version": "0.0.1"
 }
